--- a/public/admin/crearUsuario.html
+++ b/public/admin/crearUsuario.html
@@ -132,7 +132,7 @@
             <!-- /.box-header -->
             <!-- form start -->
             <form id="formu" onsubmit="createUser(this);return false;">
-              <div class="box-body">
+              <div class="form-group">
                 <select class="form-control select2" style="width: 100%; border-radius:none;" name="empresa" id="empresa">
                     <option selected="selected" value="-1">Seleccione una Empresa</option>
                   </select>
