--- a/public/codigodenuncia.html
+++ b/public/codigodenuncia.html
@@ -66,7 +66,7 @@
 				
 				<div class="col-xs-12 text-right menu-1">
 					<ul style="text-align: center;">
-						<li><a href="psicologia.html">PSICOLOGIacute;A DEL FRAUDE</a></li>
+						<li><a href="psicologia.html">PSICOLOG&Iacute;A DEL FRAUDE</a></li>
 						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
 						<li><a href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
