--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 			                       <h3 style="margin-left: 60px; margin-top: 36px;">Descarga:</h3>
 			                        <a href="">
 			                            <div class="btnDescarga" style="margin-bottom:20px;">
-			                                <img src="../img/appstore_button_google.png">
+			                                <img src="../images/qrcode.jpg">
 			                            </div>
 			                        </a>
 			                     </div>
