--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@
 									<i style="color:white;" class="icon-magnifying-glass"></i>
 									C&oacute;digo &Uacute;nico de Denuncia
 								</a><br/>
-								<img src="denuncia-online.gif"/>
+								<img src="../images/denuncia.png" style="margin-left: 10px;margin-top: 5px;" width="200" height="164"/>
 							</li>
 						</ul>
 					</div>
