Adding logo denuncia

--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,9 @@
 									<i style="color:white;" class="icon-magnifying-glass"></i>
 									C&oacute;digo &Uacute;nico de Denuncia
 								</a><br/>
-								<img src="../images/denuncia.png" style="margin-left: 10px;margin-top: 5px;" width="200" height="164"/>
+								<a href="codigodenuncia.html" style="text-decoration:none">
+									<img src="../images/denuncia.png" style="margin-left: 10px;margin-top: 5px;" width="200" height="164"/>
+								</a>
 							</li>
 						</ul>
 					</div>
