--- a/public/investigacion.html
+++ b/public/investigacion.html
@@ -212,7 +212,15 @@
 							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 350 452 26 80</a></li>
 							<li><a href="#"  style="color:white;"><i class="icon-phone" style="color:white;"></i> Radio: 2204*4</a></li>
 							<li><a href="#"  style="color:white;"><i style="color:white;" class="icon-mail2"></i> info@antifraudminds.com</a></li>
-							<li><a href="codigodenuncia.html"  style="color:white;"><i style="color:white;" class="icon-magnifying-glass"></i> C&oacute;digo &Uacute;nico de Denuncia</a></li>
+							<li>
+								<a href="codigodenuncia.html"  style="color:white;">
+									<i style="color:white;" class="icon-magnifying-glass"></i>
+									C&oacute;digo &Uacute;nico de Denuncia
+								</a><br/>
+								<a href="codigodenuncia.html" style="text-decoration:none">
+									<img src="../images/denuncia.png" style="margin-left: 10px;margin-top: 5px;" width="200" height="164"/>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
