--- a/public/codigodenuncia.html
+++ b/public/codigodenuncia.html
@@ -67,7 +67,7 @@
 				<div class="col-xs-12 text-right menu-1">
 					<ul style="text-align: center;">
 						<li><a href="psicologia.html">PSICOLOG&Iacute;A DEL FRAUDE</a></li>
-						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
+						<li><a href="tecnologia_antifraude.html">TECNOLOG&Iacute;A ANTIFRAUDE</a></li>
 						<li><a href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
 						<li><a style="border-bottom: 2px solid white;" href="contacto.html">CONTACTENOS</a></li>
