--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 				<div class="col-xs-12 text-right menu-1">
 					<ul style="text-align: center;">
 						<li><a href="psicologia.html">PSICOLOGÍA DEL FRAUDE</a></li>
-						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
+						<li><a href="tecnologia_antifraude.html">TECNOLOG&Iacute;A ANTIFRAUDE</a></li>
 						<li><a href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
 						<li><a href="contacto.html">CONTACTENOS</a></li>
@@ -94,6 +94,9 @@
 	</header>
 	
 	<div class="gtco-section border-bottom">
+		<div id="banners" class="animated fadeInLeft">
+			
+		</div>
 		<div class="gtco-container">
 			<div class="row">
 				<div class="style_cont_row"  style="">
@@ -325,11 +328,13 @@
 	<script src="js/web/magnific-popup-options.js"></script>
 	<!-- Main -->
 	<script src="js/web/main.js"></script>
+	<script src="js/clientesManager.js"></script>
 	
 	<script type="text/javascript" src="js/slick/slick.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			starSliderIn();
+			loadBanners();
 		});
 		var item1a = document.getElementById('item1');
 		var item2a = document.getElementById('item2');
@@ -364,6 +369,31 @@
 			document.getElementById("idIntUnoA").className = "animated zoomIn";
 			document.getElementById('idIntUnoA').style.display = "none";
 		}
+		
+		function loadBanners() {
+		    var bannersManager = new ClientesManager();
+		    bannersManager.obtener(function (rm) {
+		      console.log(rm);
+		      var banners  = rm.getObject();
+		      currentBanners = banners;
+		      var htmlBanners = "";
+		      
+		      for (var i = 0; i < banners.length ; i++) {
+		        var banner = banners[i];
+		        var htmlContent = '<div><img src="'+banner.urlImage+'"></img></div>';
+		        htmlBanners += htmlContent;
+		      }
+		      $("#banners").html(htmlBanners);
+		      $("#banners").slick({
+				  slidesToShow: 3,
+				  slidesToScroll: 1,
+				  autoplay: true,
+				  autoplaySpeed: 2000,
+				});
+		    }, function (rm) {
+		      
+		    });
+		  }
 	</script>
 	</body>
 </html>
