Agregando cambios 13 Agosto version 2

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -43,6 +43,17 @@
           </ul>
         </li>
         <li class=" treeview">
+          <a href="#" >
+            <i class="fa fa-folder"></i> <span>Agregar Clientes AntifraudMinds</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="agregarClientes.html"><i class="fa fa-circle-o"></i>Agregar Clientes</a></li>
+          </ul>
+        </li>
+        <li class=" treeview">
           <a href="#">
             <i class="fa fa-envelope"></i> <span>Envi&oacute; de Solicitudes</span>
             <span class="pull-right-container">
