Agregando cambios 13 Agosto version 2

--- a/public/admin/agregarClientes.html
+++ b/public/admin/agregarClientes.html
@@ -479,7 +479,7 @@
     });
   }
   
-  function editarBanner() {
+  function agregarCliente() {
     
       
       var bannersManager = new ClientesManager();
