Agregando cambios 13 Agosto version 2

--- a/public/index.html
+++ b/public/index.html
@@ -328,8 +328,8 @@
 	<script src="js/web/magnific-popup-options.js"></script>
 	<!-- Main -->
 	<script src="js/web/main.js"></script>
+	<script src="js/responsemanager.js"></script>
 	<script src="js/clientesManager.js"></script>
-	
 	<script type="text/javascript" src="js/slick/slick.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
