--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
 	</header>
 	
 	<div class="gtco-section border-bottom">
-		<div id="banners" class="animated fadeInLeft">
+		<div id="banners" class="animated fadeInLeft" style="width: 220px;text-align: center;margin: 30px auto 50px;">
 			
 		</div>
 		<div class="gtco-container">
@@ -380,12 +380,12 @@
 		      
 		      for (var i = 0; i < banners.length ; i++) {
 		        var banner = banners[i];
-		        var htmlContent = '<div><img src="'+banner.urlImage+'"></img></div>';
+		        var htmlContent = '<div><img src="'+banner.urlImage+'" width="100" height="100"></img></div>';
 		        htmlBanners += htmlContent;
 		      }
 		      $("#banners").html(htmlBanners);
 		      $("#banners").slick({
-				  slidesToShow: 3,
+				  slidesToShow: 1,
 				  slidesToScroll: 1,
 				  autoplay: true,
 				  autoplaySpeed: 2000,
