--- a/public/index.html
+++ b/public/index.html
@@ -94,8 +94,11 @@
 	</header>
 	
 	<div class="gtco-section border-bottom">
-		<div id="banners" class="animated fadeInLeft gtco-container" style="width: 220px;text-align: center;margin: 10px auto 10px;">
+		<div class="gtco-container animated" style="width: 220px;text-align: center;margin: 10px auto 10px;">
+			<div>Nuestros Clientes</div><br><br>
+			<div id="banners" style="width: 220px;">
 			
+			</div>
 		</div>
 		<div class="gtco-container">
 			<div class="row">
@@ -376,7 +379,7 @@
 		      console.log(rm);
 		      var banners  = rm.getObject();
 		      currentBanners = banners;
-		      var htmlBanners = "<div>Nuestros Clientes</div><br><br>";
+		      var htmlBanners = "";
 		      
 		      for (var i = 0; i < banners.length ; i++) {
 		        var banner = banners[i];
