Agregando cambios 13 Agosto version 2

--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,7 @@
 		      
 		      for (var i = 0; i < banners.length ; i++) {
 		        var banner = banners[i];
-		        var htmlContent = '<img src="'+banner.urlImage+'" width="100" height="100"></img>';
+		        var htmlContent = '<img src="'+banner.urlImage+'" style="width: 140px; height:140px"/>';
 		        htmlBanners += htmlContent;
 		      }
 		      $("#banners").html(htmlBanners);
