--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 		</div>
 	</header>
 	
-	<div class="gtco-section border-bottom">
+	<div class="border-bottom" style="padding: 7em 0; position: relative;">
 		<div class="gtco-container animated" style="width: 220px;text-align: center;margin: 10px auto 10px;">
 			<div>Nuestros Clientes</div><br><br>
 			<div id="banners" style="width: 220px;">
@@ -383,7 +383,7 @@
 		      
 		      for (var i = 0; i < banners.length ; i++) {
 		        var banner = banners[i];
-		        var htmlContent = '<img src="'+banner.urlImage+'" style="width: 140px; height:140px"/>';
+		        var htmlContent = '<img src="'+banner.urlImage+'" width="100" height="100"/>';
 		        htmlBanners += htmlContent;
 		      }
 		      $("#banners").html(htmlBanners);
