Agregando cambios 13 Agosto version 2

--- a/public/index.html
+++ b/public/index.html
@@ -95,12 +95,12 @@
 	
 	<div class="border-bottom" style="padding: 7em 0; position: relative;">
 		<div class="gtco-container animated" style="width: 220px;text-align: center;margin: 10px auto 10px;">
-			<div>Nuestros Clientes</div><br><br>
+			<div><h2 style="color:black">Nuestros Clientes</h2></div><br><br>
 			<div id="banners" style="width: 220px;">
 			
 			</div>
 		</div>
-		<div class="gtco-container">
+		<div class="gtco-container" style="margin-top: 30px">
 			<div class="row">
 				<div class="style_cont_row"  style="">
 			 		<div id="item1" style="display:none" class="animated fadeInLeft">
