--- a/public/index.html
+++ b/public/index.html
@@ -94,13 +94,13 @@
 	</header>
 	
 	<div class="border-bottom" style="padding: 7em 0; position: relative;">
-		<div class="gtco-container animated" style="width: 220px;height: 400px; text-align: center;margin-top: 800px;">
-			<div style="width: 267px"><h2 style="color:black">Nuestros Clientes</h2></div><br><br>
-			<div id="banners" style="width: 220px; margin-top: -50px;">
+		<div class="gtco-container animated" style="width: 220px;text-align: center;margin: 10px auto 10px;">
+			<div><h2 style="color:black">Nuestros Clientes</h2></div><br><br>
+			<div id="banners" style="width: 220px;">
 			
 			</div>
 		</div>
-		<div class="gtco-container" style="margin-top: -60px">
+		<div class="gtco-container" style="margin-top: 30px">
 			<div class="row">
 				<div class="style_cont_row"  style="">
 			 		<div id="item1" style="display:none" class="animated fadeInLeft">
@@ -383,7 +383,7 @@
 		      
 		      for (var i = 0; i < banners.length ; i++) {
 		        var banner = banners[i];
-		        var htmlContent = '<img src="'+banner.urlImage+'" width="100" height="100"/>';
+		        var htmlContent = '<a href="'+banner.url+'" style="text-decoration:none"><img src="'+banner.urlImage+'" width="100" height="100"/></a>';
 		        htmlBanners += htmlContent;
 		      }
 		      $("#banners").html(htmlBanners);
