--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,7 @@
 		      
 		      for (var i = 0; i < banners.length ; i++) {
 		        var banner = banners[i];
-		        var htmlContent = '<a href="'+banner.url+'" style="text-decoration:none"><img src="'+banner.urlImage+'" width="100" height="100"/></a>';
+		        var htmlContent = '<a href="'+banner.url+'" style="text-decoration:none" target="_blank"><img src="'+banner.urlImage+'" width="100%" height="100%"/></a>';
 		        htmlBanners += htmlContent;
 		      }
 		      $("#banners").html(htmlBanners);
