--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
 	</header>
 	
 	<div class="border-bottom" style="padding: 7em 0; position: relative;">
-		<div class="gtco-container animated" style="width: 220px;text-align: center;margin: 10px auto 10px;">
+		<div class="gtco-container animated" style="width: 220px;text-align: center;margin: 10px auto 10px;" id="clientes">
 			<div><h2 style="color:black">Nuestros Clientes</h2></div><br><br>
 			<div id="banners" style="width: 220px;">
 			
@@ -336,6 +336,7 @@
 	<script type="text/javascript" src="js/slick/slick.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
+			$("#clientes").hide();
 			starSliderIn();
 			loadBanners();
 		});
@@ -380,11 +381,13 @@
 		      var banners  = rm.getObject();
 		      currentBanners = banners;
 		      var htmlBanners = "";
-		      
 		      for (var i = 0; i < banners.length ; i++) {
 		        var banner = banners[i];
 		        var htmlContent = '<a href="'+banner.url+'" style="text-decoration:none" target="_blank"><img src="'+banner.urlImage+'" width="100%" height="100%"/></a>';
 		        htmlBanners += htmlContent;
+		      }
+		      if (htmlBanners.length > 0) {
+		      	$("#clientes").show();
 		      }
 		      $("#banners").html(htmlBanners);
 		      $("#banners").slick({
