--- a/public/admin/sidebarUser.html
+++ b/public/admin/sidebarUser.html
@@ -4,7 +4,8 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu">
         <li class="header">MEN&Uacute; DE NAVEGAVI&OacuteO</li>
-        <li class="active treeview">
+        <li><a href="cambioPass.html"><i class="fa fa-circle-o text-aqua" style="color: white !important;"></i> <span>Cambio de Contrase&ntilde;a</span></a></li>
+        <li class="active">
           <a href="#" style="border-left-color: #c5a628;">
             <i class="fa fa-dashboard"></i> <span>Envi&oacute; de Solicitudes</span>
             <span class="pull-right-container">
