--- a/public/admin/suEnviarSolicitud.html
+++ b/public/admin/suEnviarSolicitud.html
@@ -56,7 +56,7 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="dist/img/user1-128x128.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs" id="nombreMini">Seguros Bolivar</span>
+              <span class="hidden-xs" id="nombreMini">--</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
@@ -64,7 +64,7 @@
                 <img id="logoPopup" src="dist/img/user1-128x128.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  <label id="nombrePopup">Seguros Bolivar</label>
+                  <label id="nombrePopup">--</label>
                   <small id="ciudadPopup">Bogot&aacute;</small>
                 </p>
               </li>
