--- a/public/admin/cambioPass.html
+++ b/public/admin/cambioPass.html
@@ -239,7 +239,7 @@ function toogleMenu() {
 function cambiarPass(form) {
     if (form.currentPass.value.length > 0 && form.newPass.value.length > 0 && form.reNewPass.value.length > 0 && form.reNewPass.value == form.newPass.value) {
         var usuarioManager = new UsuarioManagerHandler();
-        usuarioManager.cambiarPass(cliente.email, form.newPass.value, currentCliente.tipo, function (responseManager) {
+        usuarioManager.cambiarPass(currentCliente.email, form.newPass.value, currentCliente.tipo, function (responseManager) {
             console.log(responseManager);
             logout();
              
