--- a/public/admin/verUsuario.html
+++ b/public/admin/verUsuario.html
@@ -225,10 +225,10 @@
 
  function renderUsuarios(usuarios) {
    var contentStr = '';
-   contentStr += '<tr><th></th><th class="mailbox-star"></th><th class="mailbox-name">Nombre</th><th class="mailbox-name">C&eacute;dula</th><th class="mailbox-name">Cargo</th><th class="mailbox-name">Empresa</th><th class="mailbox-name">Email</th><th class="mailbox-name" colspan="2">Acciones</th></tr>';
+   contentStr += '<tr><th></th><th class="mailbox-name">Nombre</th><th class="mailbox-name">C&eacute;dula</th><th class="mailbox-name">Cargo</th><th class="mailbox-name">Empresa</th><th class="mailbox-name">Email</th><th class="mailbox-name" colspan="2">Acciones</th></tr>';
    for (var i=1; i<usuarios.length;i++) {
      var usuario = usuarios[i];
-     contentStr += '<tr><td></td><td class="mailbox-star"><i class="fa fa-circle text-success"></i></td><td class="mailbox-name">'+usuario.nombre+'</td><td class="mailbox-name">'+usuario.cedula+'</td><td class="mailbox-name">' + usuario.cargo +  '</td><td class="mailbox-name">'+usuario.nombreEmpresa+'</td><td class="mailbox-name">'+usuario.email+'</td><td class="mailbox-name"><a href="editarUsuario.html?idUsuario='+usuario.id+'">Editar</a></td><td class="mailbox-name"><a href="javascript:borrar('+usuario.id+',\''+usuario.email+'\''+');">Eliminar</a></td></tr>';
+     contentStr += '<tr><td></td><td class="mailbox-name">'+usuario.nombre+'</td><td class="mailbox-name">'+usuario.cedula+'</td><td class="mailbox-name">' + usuario.cargo +  '</td><td class="mailbox-name">'+usuario.nombreEmpresa+'</td><td class="mailbox-name">'+usuario.email+'</td><td class="mailbox-name"><a href="editarUsuario.html?idUsuario='+usuario.id+'">Editar</a></td><td class="mailbox-name"><a href="javascript:borrar('+usuario.id+',\''+usuario.email+'\''+');">Eliminar</a></td></tr>';
    }
    document.getElementById("contentUsuarios").innerHTML = contentStr;
  }
