--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -55,13 +55,13 @@
         </li>
         <li class=" treeview">
           <a href="#">
-            <i class="fa fa-envelope"></i> <span>Envi&oacute; de Solicitudes</span>
+            <i class="fa fa-envelope"></i> <span>Administrar Solicitudes</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li class="active"><a href="saVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
+            <li class="active"><a href="saVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Administrar Solicitudes</a></li>
           </ul>
         </li>
         <li class=" treeview">
