--- a/public/admin/sidebarUser.html
+++ b/public/admin/sidebarUser.html
@@ -1,19 +1,19 @@
  <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
-      
+
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu">
         <li class="header">MEN&Uacute; DE NAVEGAVI&OacuteO</li>
         <li><a href="cambioPass.html"><i class="fa fa-circle-o text-aqua" style="color: white !important;"></i> <span>Cambio de Contrase&ntilde;a</span></a></li>
         <li class="active">
           <a href="#" style="border-left-color: #c5a628;">
-            <i class="fa fa-dashboard"></i> <span>Envi&oacute; de Solicitudes</span>
+            <i class="fa fa-dashboard"></i> <span>Administrar Solicitudes</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li class="active"><a href="suVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
+            <li class="active"><a href="suVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Administrar Solicitudes</a></li>
           </ul>
         </li>
         <li><a href="suEnviarMensaje.html"><i class="fa fa-circle-o text-aqua" style="color: white !important;"></i> <span>Contactenos</span></a></li>
