--- a/public/admin/saEnviarSolicitud.html
+++ b/public/admin/saEnviarSolicitud.html
@@ -154,7 +154,7 @@
               <div class="form-group">
                 <div class="btn btn-default btn-file">
                   <i class="fa fa-paperclip"></i> Attachment
-                  <input type="file" name="attachment">
+                  <input type="file" name="attachment" multiple="multiple">
                 </div>
                 <p class="help-block">Max. 32MB</p>
               </div>
