--- a/public/admin/saVerSolicitud.html
+++ b/public/admin/saVerSolicitud.html
@@ -226,7 +226,7 @@ postLogin = function (cliente) {
   if (cliente.tipo == 0) {
       loadSideBar();
     } else {
-      if (cliente.tipo == 1 && cliente.id == 1) {
+      if (cliente.tipo >= 1 && cliente.id == 1) {
         loadSideBarUser();
       }
     }
