--- a/public/admin/suVerSolicitudesAll.html
+++ b/public/admin/suVerSolicitudesAll.html
@@ -210,7 +210,7 @@ var currentCliente = null;
 });
 
 postLogin = function (cliente) {
-  if (cliente.tipo == 1) {
+  if (cliente.tipo >= 1) {
       loadSideBarUser();
     }
   currentCliente = cliente;
