--- a/public/admin/editarUsuario.html
+++ b/public/admin/editarUsuario.html
@@ -155,6 +155,15 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="tipo">Plan</label>
+                  <select name="plan">
+                    <option value="0">Admin</option>
+                    <option value="1">Gold</option>
+                    <option value="2">Platino</option>
+                  </select>
+                </div>
+
+                <div class="form-group">
                   <label for="nombre">Nombre</label>
                   <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Nombre">
                 </div>
@@ -315,6 +324,7 @@
    form.cedula.value =  data.cedula = usuario.cedula;
    form.cargo.value =  data.cargo = usuario.cargo;
    data.idEmpresa = usuario.idEmpresa;
+   form.plan.selectedIndex = usuario.tipo;
    loadEmpresas(usuario.idEmpresa);
  }
 
@@ -371,6 +381,7 @@ function updateUser(form) {
     data.idEmpresa = form.empresa.value;
     data.cargo = form.cargo.value;
     data.cedula = form.cedula.value;
+    data.tipo = form.plan.value;
 
     var usuarioManager = new UsuarioManagerHandler();
     usuarioManager.update(data, function(rm) {
