--- a/public/admin/indexUser.html
+++ b/public/admin/indexUser.html
@@ -227,7 +227,7 @@ $(document).ready(function () {
 });
 
 postLogin = function (cliente) {
-  if (cliente.tipo == 1) {
+  if (cliente.tipo >= 1) {
       loadSideBarUser();
     }
   renderData(cliente);
